--- a/_posts/post/2020-11-10-git-flow.md
+++ b/_posts/post/2020-11-10-git-flow.md
@@ -17,17 +17,26 @@ comments: true
 
 ### 简介
 
-典型的git flow拥有三个主分支develop，test，master，一般对应着开发流程中的三个环境，开发，测试，正式。而像flow这个单词所所描述的那样，代码是在不同的节点流向另一个分支。
+1. 规定了开发分支feature分支和三个主分支develop，test，master
+2. 代码的流动必须朝固定的方向，develop->feature（基于develop拉取开发分支）->develop(开发完成合并到develop)->test(基于规划merge到test分支进行测试）->master(基于master分支进行发布)
+3. hotfix流程需要基于master分支拉取hotfix分支，开发完成之后merge到hotfix分支进行发布，同时为了保证代码统一以及代码流动方向固定，需要cherry-pick commit到test和develop分支
+4. 固定的合并顺序是为了保证分支的git commit数据流简洁，无混乱缠绕的情况，方便代码的追溯
 
 ### 好的点
 
-现在大多数的开发团队都是首选git flow作业团队协作模型，其主要原因也是git flow的三个分支能够很好的对应到业务开发流程中的三个环境开发，测试，正式，而遵循git flow的规范，即代码只能从一个方向往下流，即develop -> test -> master，这样是为了保证git commit 数据流的规整，当然如果需要hotfix，git flow的规范也有包含，但是注意，同样需要准许代码只能往一个方向流动的规则，如果的确需要倒流，可以使用cherry-pick。
+能很好的对应日常业务开发过程中的三个固定阶段，开发，测试，发布
 
 ### 欠缺的点
 
-git flow规范中对应的三个分支，是固定分支，而需求是不固定的，这就使得分支成为了被竞争的有限资源，比如同时存在两个进行中的需求，一个是大版本的需求，开发测试时间跨度都很大，一个是短期的优化需求，这样在使用test分支这个有限资源是，就存在竞争情况，这样就导致了无法直接使用test分支合并到master分支发布，而如何合并也会由于git的特性而导致新的问题。
-如果直接将feature分支合并到master，则不会引入一些问题，但这也导致了可能会将feature分支上未发布的代码带入到master。如果使用cherry-pick合并（是否rebase -i依据个人习惯），则会导致commit发生变更，这样就会导致如果后续再将test合并到master，由于test和master都存在相同的代码改动，但不属于同一个commit，会被git识别成冲突。
-所以，如果想很好的使用git flow，需要有一个固定的版本规划。
+1. git flow中的三个主分支是固定分支，存在固定资源争抢的问题
+    * 比如一个大的版本需求，开发测试时间跨度很长
+    * 同时一个短期的优化需求，开发测试时间相对较短
+    * 两份需求同时需要测试资源进行测试，代码同时存在于test分支
+    * 当短期需求需要发布是，长期需求因仍占据test分支，是的无法按照git flow的要求，直接将test分支merge到master分支进行发布
+2. 如果存在分支资源争抢，则可能会导致连续的两个分支commit差异问题
+    * 由于无法直接merge test分支到master进行发布，同时，为了防止将feature分支上不需要发布的功能带上线（按照git flow规范，feature分支是基于develop拉取，可能保留develop上开发中的代码），开发人员需手动cherry-pick对应的提交点到master
+    * 同时，依据个人习惯，也可以手动使用git rebase -i 进行分支合并然后再cherry-pick
+    * 因为git的特性，cherry-pick后commit会发生变更，则会导致master分支和test分支存在相同的代码改动，但是是由两个不同的commit引入的，导致两个分支存在冲突，长久下去，test分支几乎是无法再正常合并到master
 
 ## github flow
 
