--- a/_posts/post/2020-11-10-git-flow.md
+++ b/_posts/post/2020-11-10-git-flow.md
@@ -18,6 +18,7 @@ comments: true
 ### 简介
 
 1. 规定了开发分支feature分支和三个主分支develop，test，master
+    * 主分支的概念是允许扩展的
 2. 代码的流动必须朝固定的方向，develop->feature（基于develop拉取开发分支）->develop(开发完成合并到develop)->test(基于规划merge到test分支进行测试）->master(基于master分支进行发布)
 3. hotfix流程需要基于master分支拉取hotfix分支，开发完成之后merge到hotfix分支进行发布，同时为了保证代码统一以及代码流动方向固定，需要cherry-pick commit到test和develop分支
 4. 固定的合并顺序是为了保证分支的git commit数据流简洁，无混乱缠绕的情况，方便代码的追溯
@@ -42,8 +43,12 @@ comments: true
 
 ### 简介
 
-其实github flow是相对于git flow来的，他只拥有一个主分支，并没有代码流动的概念。github flow的主要场景是对主分支master分支进行保护，所有对master分支的合并必须经过完整的PR流程
-
+1. github flow只有对应的需求分支和一个主分支master
+2. 开发人员需要基于主分支拉取开发分支
+3. 开发完成后提交PR，用于代码的合入
+4. PMC review 之后merge对代码到master
+    * 一般采用squash方式合入，合并请求，保证master分支的commit简洁和git commit数据流的单调
+    
 ### 好的点
 
 关键的好处就是简单，因为只有一个主分支，只需要对其进行保护和PR操作，没有git flow这么复杂的代码流动，hotfix处理，也就不会存在太过于复杂的git commit 数据流。
