--- a/_posts/post/2020-11-10-git-flow.md
+++ b/_posts/post/2020-11-10-git-flow.md
@@ -59,10 +59,11 @@ comments: true
 
 ## 是否可以混用
 
-这两种协作方式都是单纯的技术点，没有明确的规定哪里该怎么使用，只有选择自己合适的方式。一般情况下，更多的是在git flow里混合github flow的PR来使用。
-个人是不建议这种使用方式的，因为PR的主旨很明显，是用来对主分支进行保护的，尤其是PR的squash功能在这点上特别明显，squash是用来合并提交merge，这里主要是保护主分支不使其有过多过散的git commit 数据流。
-而如果在git flow中使用了这种方式，就会导致主分支和另外两个分支，像test分支，拥有相同的代码改动，却属于两个不同的commit，这样会导致下次代码流动，会有过多的冲突，长久以往，几乎是无法完成一次代码流动。
-而git flow也和github flow大的不同是，git flow主要靠测试来保证代码的可靠性，而github flow要靠review来保证其主分支的可靠性。
+1. 这两种协作方式都是单纯的技术点，没有明确的规定哪里该怎么使用，只有选择自己合适的方式。
+2. 一般情况下，是在git flow里混合github flow的PR来使用。
+3. git flow拥有多个主分支，而github flow只拥有一个主分支，使用github的保护策略，可能会导致多个git flow主分支间的commit 不一致。
+3. 个人是不建议这种使用方式的，因为PR的主旨很明显，是用来对主分支进行保护的，尤其是PR的squash功能在这点上特别明显，squash是用来合并提交merge，这里主要是保护主分支不使其有过多过散的git commit 数据流。
+    * 如果使用squash进行合并，则会导致两个分支拥有相同的代码改动，却属于不同的commit，从git的角度来说，两个分支就存在了冲突，不利于git flow的分支流动
 
 ## 个人觉得好的协作方式
 
