--- a/_posts/yan/2020-11-20-yanyan184.md
+++ b/_posts/yan/2020-11-20-yanyan184.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-带着老师奖励的鹿角发箍下楼骑滑板车
+戴着妈妈买的的鹿角发箍下楼骑滑板车
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/toudailujiao.jpeg?imageMogr2/auto-orient" />
