--- a/_posts/post/2021-01-09-paxos.md
+++ b/_posts/post/2021-01-09-paxos.md
@@ -31,7 +31,7 @@ learners：只能`学习`提案
    * if has(minProposal) and n > minProposal then minProposal = n and Return(acceptedProposal, acceptedValue)   
    * if ! has(minProposal) then minProposal = n and Return(true)
 
-## 批准阶段
+### 批准阶段
 
 1. 当一个proposer收到了多数acceptors对prepare的回复后，就进入批准阶段。它要向回复prepare请求的acceptors发送accept请求，包括编号n和值value（如果在准备阶段没有收到acceptor回复的value，则可以是任何value）。
    * if received(value) then Accepted(n, value)
@@ -43,3 +43,7 @@ learners：只能`学习`提案
 <figure>
     <img src="{{ site.staticUrl }}/image/jpg/paxos.jpg" />
 </figure>
+
+## 实际使用
+
+在实际场景中，分布式系统任意一个值得决议，都需要通过paxos算法过程进行决议并学习通过的提案，这样就带来了比较大的开销，所以拥有改进的`multi-paxos`，该算法支持一组连续的值被达成一致并学习。
