--- a/_posts/post/2021-01-09-paxos.md
+++ b/_posts/post/2021-01-09-paxos.md
@@ -9,7 +9,7 @@ tag:
 comments: true
 ---
 
-##简述
+## 简述
 
 基于消息传递的分布式系统，不可避免的面临进程被杀死，重启，延迟，丢失，重复等问题，而经典的paxos算法就是用来处理这类问题。paxos能够保证多个节点就某个值的最终达成一致。
 
@@ -47,3 +47,15 @@ learners：只能`学习`提案
 ## 实际使用
 
 在实际场景中，分布式系统任意一个值得决议，都需要通过paxos算法过程进行决议并学习通过的提案，这样就带来了比较大的开销，所以拥有改进的`multi-paxos`，该算法支持一组连续的值被达成一致并学习。
+和典型的proxy不同的点在于，multi-proxy通过index参数来控制不同paxos实例间的隔离, 如：
+```
+Client   Proposer      Acceptor     Learner
+   |         |          |  |  |       |  | --- First Request ---
+   X-------->|          |  |  |       |  |  Request
+   |         X--------->|->|->|       |  |  Prepare(N)
+   |         |<---------X--X--X       |  |  Promise(N,I,{Va,Vb,Vc})
+   |         X--------->|->|->|       |  |  Accept!(N,I,V)
+   |         |<---------X--X--X------>|->|  Accepted(N,I,V)
+   |<---------------------------------X--X  Response
+   |         |          |  |  |       |  |
+```
