--- a/_posts/yan/2020-10-13-yanyan181.md
+++ b/_posts/yan/2020-10-13-yanyan181.md
@@ -12,7 +12,7 @@ video: true
 徐晓妍的好朋友过生日，徐晓妍❤️小朋友是左边第三个哦，左边第二个是过生日的小朋友萌崽
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri.jpg" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/qitaxiaopengyouguoshengri.mp4" type='video/mp4'>
