--- a/_posts/post/2021-02-02-task.md
+++ b/_posts/post/2021-02-02-task.md
@@ -27,7 +27,7 @@ comments: true
 * 在执行任务时，该方案仍然无法将单个任务分发到集群中的所有节点执行
 
 ```go
-type SliceTask interface {
+type PreSliceTask interface {
 	//任务实现，允许将一个任务分片并发执行
 	Slice() []interface{}
 	//任务实现，判断该任务分片是否是主分片，主分片负责在执行成功后计算下次待执行的时间
@@ -37,4 +37,5 @@ type SliceTask interface {
 }
 
 ```
-任务对象实现上述伪代码接口，允许单个任务判断是否可以分片，以提高单个任务并发执行的效率，但只能定义一个主分片，主分片负责计算该任务下次执行的时间，如果为0，则不继续投入时间区间。
+* 任务对象实现上述伪代码接口，用以支持任务的预处理，比如每隔一个时间段自动给用户发通知，预处理可以查询用户集合并分片，用来分担执行压力
+    * 允许单个任务判断是否可以分片，以提高单个任务并发执行的效率，但只能定义一个主分片，主分片负责计算该任务下次执行的时间，如果为0，则不继续投入时间区间。
