--- a/_posts/post/2021-02-02-task.md
+++ b/_posts/post/2021-02-02-task.md
@@ -22,7 +22,9 @@ comments: true
 3. 根据业务需要和对数据的细分程度的容忍，来制定对应的时间间隔（比如1分钟），将时间轮划分成不同的时间区间，同属于一个时间区间的任务，将同一批执行。
 4. 集群中的所有节点可以各自维护一个时间轮，当指针指向对应的区间时，即消费消息队列中的数据，使得集群能够分担整个任务执行的压力（集群中的各个节点服务器时间尽量一致）
 5. 任务不会重复执行，消息队列中的任务数据被单个节点执行成功之后自动弹出。
-![时间轮](shijianlun.png)
+<figure>
+    <img src="{{ site.staticUrl }}/image/png/shijianlun.png" />
+</figure>
    
 * 在执行任务时，该方案仍然无法将单个任务分发到集群中的所有节点执行
 
