--- a/_posts/yan/2018-05-11-yanyan44.md
+++ b/_posts/yan/2018-05-11-yanyan44.md
@@ -16,8 +16,8 @@ comments: true
 大家要好好相处哦。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/youxi1.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/youxi2.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/youxi3.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/youxi1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/youxi2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/youxi3.jpg" />
 </figure>
 
