--- a/_posts/yan/2018-11-20-yanyan82.md
+++ b/_posts/yan/2018-11-20-yanyan82.md
@@ -12,7 +12,7 @@ video: true
 爷爷奶奶打乒乓球，妍妍也会在旁边嘿哈嘿哈的学，还学的有模有样
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/pingpang.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/pingpang.jpg" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/pingpang.mp4" type='video/mp4'>
