--- a/_posts/yan/2018-12-13-yanyan89.md
+++ b/_posts/yan/2018-12-13-yanyan89.md
@@ -11,5 +11,5 @@ comments: true
 现在怎么这么喜欢皱眉头呢
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/zoumeitou.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zoumeitou.jpg" />
 </figure>
