--- a/_posts/yan/2019-06-11-yanyan130.md
+++ b/_posts/yan/2019-06-11-yanyan130.md
@@ -11,6 +11,6 @@ comments: true
 自己坐在筐子里玩玩具。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/zkzlw1.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zkzlw2.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zkzlw1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zkzlw2.jpg" />
 </figure>
