--- a/_posts/yan/2019-06-30-yanyan133.md
+++ b/_posts/yan/2019-06-30-yanyan133.md
@@ -11,5 +11,5 @@ comments: true
 周末全家去岳麓山玩，在爱晚亭和孔雀合了个影。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/aiwanting.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/aiwanting.jpg" />
 </figure>
