--- a/_posts/yan/2019-09-04-yanyan143.md
+++ b/_posts/yan/2019-09-04-yanyan143.md
@@ -11,5 +11,5 @@ comments: true
 徐晓妍发烧了，38.9，吃了退烧药，玩一下就睡着了，精神还是不太好。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/fashaoshuizhaole.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/fashaoshuizhaole.jpg" />
 </figure>
