--- a/_posts/yan/2019-09-27-yanyan146.md
+++ b/_posts/yan/2019-09-27-yanyan146.md
@@ -11,5 +11,5 @@ comments: true
 妈妈偷拍的一张妍妍和小朋友在楼下玩的照片，被奶奶挡住了半边身子，要仔细看才能找到。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/hexiaopengyouwan.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/hexiaopengyouwan.jpg" />
 </figure>
