--- a/_posts/yan/2020-07-07-yanyan173.md
+++ b/_posts/yan/2020-07-07-yanyan173.md
@@ -11,5 +11,5 @@ comments: true
 风一样的徐晓妍😊
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/fengyiyangdexuxiaoyan3.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/fengyiyangdexuxiaoyan3.jpg" />
 </figure>
