--- a/_posts/yan/2020-08-30-yanyan178.md
+++ b/_posts/yan/2020-08-30-yanyan178.md
@@ -11,6 +11,6 @@ comments: true
 徐晓妍和小朋友一起拍照❤️
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/jiaoaodexuxiaoyan0.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jiaoaodexuxiaoyan1.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jiaoaodexuxiaoyan0.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jiaoaodexuxiaoyan1.jpg" />
 </figure>
