--- a/_posts/yan/2020-11-20-yanyan184.md
+++ b/_posts/yan/2020-11-20-yanyan184.md
@@ -11,5 +11,5 @@ comments: true
 戴着妈妈买的的鹿角发箍下楼骑滑板车
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/toudailujiao.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/toudailujiao.jpg" />
 </figure>
