--- a/_posts/yan/2021-01-13-yanyan190.md
+++ b/_posts/yan/2021-01-13-yanyan190.md
@@ -11,5 +11,5 @@ comments: true
 太阳不错，奶奶带着徐晓妍去月亮岛嗮太阳
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yueliangdaoyouwan1112.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yueliangdaoyouwan1112.jpg" />
 </figure>
