--- a/_posts/yan/2018-05-04-yanyan42.md
+++ b/_posts/yan/2018-05-04-yanyan42.md
@@ -11,6 +11,6 @@ comments: true
 妍妈上班了，给我发来她穿着护士服的照片，没问过她就放到网上来了，因为我觉得这个需要纪念一下。照片里的妍妈还是看着那么的年轻美丽。今天是青年节，妍妈早上就和我说她今天要过节，嗯，妍妈节日快乐。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yanma.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yanma.jpg" />
 </figure>
 
