--- a/_posts/yan/2018-08-02-yanyan57.md
+++ b/_posts/yan/2018-08-02-yanyan57.md
@@ -11,5 +11,5 @@ comments: true
 你妈这么打扮你，是真爱啊。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/daban.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/daban.jpg" />
 </figure>
