--- a/_posts/yan/2018-10-16-yanyan74.md
+++ b/_posts/yan/2018-10-16-yanyan74.md
@@ -11,7 +11,7 @@ comments: true
 今天超市打折，带着徐晓妍去逛美特好超市
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/meitehao3.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meitehao1.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meitehao2.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meitehao3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meitehao1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meitehao2.jpg" />
 </figure>
