--- a/_posts/yan/2019-04-11-yanyan116.md
+++ b/_posts/yan/2019-04-11-yanyan116.md
@@ -12,8 +12,8 @@ video: true
 亭亭玉立的妍妍和做鬼脸的妍妍
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/ttyl.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/ttyl1.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/ttyl.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/ttyl1.jpg" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/hyguilian.mp4" type='video/mp4'>
