--- a/_posts/yan/2019-10-28-yanyan151.md
+++ b/_posts/yan/2019-10-28-yanyan151.md
@@ -11,8 +11,8 @@ comments: true
 徐晓妍两岁了，给妍妍过生日时拍的照片，全家福拍的有点歪，见谅哈。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile1.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile2.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile3.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile4.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/liangsuile4.jpg" />
 </figure>
