--- a/_posts/yan/2020-05-06-yanyan162.md
+++ b/_posts/yan/2020-05-06-yanyan162.md
@@ -11,13 +11,13 @@ comments: true
 五一节一起去莽山爬山，妍妍很厉害，都是自己爬山去的。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan1.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan2.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan3.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan4.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan5.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan6.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan7.jpeg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan8.jpeg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan4.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan6.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan7.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan8.jpg" />
 </figure>
 
