--- a/_posts/yan/2021-02-08-yanyan191.md
+++ b/_posts/yan/2021-02-08-yanyan191.md
@@ -8,7 +8,7 @@ feature: https://cdn.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-和爸爸一起睡😊
+妍妍和爸爸一起睡😊
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/hebabashuijiao.jpg" />
