--- a/_posts/yan/2021-03-03-yanyan195.md
+++ b/_posts/yan/2021-03-03-yanyan195.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-徐晓妍和妈妈拍的合照大头贴（不知道现在还有大头贴这个词没）
+徐晓妍和妈妈拍的合照大头贴（不知道现在还有大头贴这个词没😄）
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/yanyanmamahezhao0.jpg" />
