--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -45,38 +45,53 @@ comments: false
 * 核身系统逐步取代安全部的二次验证，在淘宝网全网铺开。
 * 离开时初步参与核身系统上云方案。 
 
-### 2016.07- 2018.05／安克创新科技股份有限公司／资深开发工程师
+### 2016.07-2018.05／安克创新科技股份有限公司／资深开发工程师
 * 负责ERP系统的开发
 * 负责后端接口的维护（响应耗时，调用记录等）
 * 大数据表分表工作（简单哈希 + 虚拟节点）
 
 
-### 2018.05- ~ /湖南亚信
+### 2018.05-2020.04 /湖南亚信
 * 负责物联网控制平台的多种通信协议的支持，如数据解析，身份认证等。
     * 支持如Lwm2m，Coap协议等。
     * 基于Apache AJP，实现自定义的TCP协议
 
+### 2020.04 ~ /腾讯
+* 负责腾讯教育产业智慧业务的开发，主要包括智慧校园，作业服务
+    
 ## 项目
 
-### 系统全链路数据采集串联
-* 记录一个完整的请求在经过多个系统间的链路调用情况
-    * 对于独立的一个请求，维护了traceId的生成和系统间传递逻辑
-    * 基于log4j Layout，实现自定义日志通配符并自动记录串联信息
-    * 基于logstash的日志采集和elasticsearch的日志存储
-    * 数据的模版化查询
-    
-### Lwm2m物联网规范服务端
-* Lwm2m是OMA（Open Mobile Alliance）制定的物联网规范，依据通用协议，实现相应的服务端程序。Lwm2m底层基于Coap协议支持，提供平台化的对物联网硬件的管理能力。
-    * 接受请求类型：客户端的注册，信息更新，注销
-    * 发送请求类型：对客户端对象单个实例进行响应的读，写，执行等操作。
-    
-### lorawan无线电协议管理控制平台
-* 基于[ChirpStack](https://www.chirpstack.io/)，使用golang二次开发的lorawan协议服务控制平台，整个服务分成三部分，gateway bridge，network server， application server。
-    * gateway bridge: 接收gateway设备收到的无线电并转发的网络信号
-    * network server: lorawan协议核心处理模块，指令控制，下行数据转发
-    * application server: 用户管理控制平台，允许录入设备并与network server通信
-    
-### Seata
-* seata项目是阿里开源的分布式事务服务，基于改进过的二阶段提交原理进行服务，回滚策略使用日志回放的方式进行。
-    * 主要负责seata的事务传播模块编写，如grpc，跨线程传播。
-    * 对seata的反压给出方案并进一步实现。
+### 分布式事物Seata
+* 项目描述
+1. 支持多种不同的事物模式（AT，TCC，Saga），其中AT模式是Seata基于二阶段提交典型模型的变种
+2. 一阶段：业务数据和回滚日志记录在同一个本地事务中提交，释放本地锁和连接资源。
+3. 二阶段：
+  * 提交异步化，快速地完成。
+  * 回滚通过一阶段的回滚日志进行反向补偿。
+4. Seata默认的隔离级别是读未提交，如需上升到读已提交，则需使用`SELECT FOR UPDATE`语法
+5. 个人参与该项目中事物传播的部分
+  * 全局事物的开启，使用GlobalTransactionScanner构建切面并添加到spring aop托管
+  * rpc服务全局事物id的传播
+  * 本地线程全局事物id的传播
+
+### 物联网管理平台
+* 项目描述
+1. 支持多种物联网协议（coap，lwm2m，mqtt，lorawan），允许多种设备接入该物联网平台
+2. 接入模块：支持创建用户，分组，允许将接入的服务划分到不同的分组下
+3. 指令传输：可以给物联网设备发送下行指令，并支持给物联网硬件进行在线固件升级
+4. 状态展示：用户可直观的查看接入的设备的当前状态
+5. 统计模块: 用户操作，设备状态等数据汇总展示
+6. 个人主要参与到该项目中多种协议的支持
+  * coap, lwm2m, lorawan等物联网协议支持
+
+### 智慧校园项目
+* 项目描述
+1. 分为平台层和智慧应用侧
+2. 平台层提供基本的学校，教育局管理功能以及应用接入的功能
+3. 应用侧提供一些智慧教学应用，比如比如通讯录，异常状态上报，作业，报修，一些在线课程教学等，便捷日常教学
+4. 平台侧与应用侧基于自定义协议传输
+5. 打通了微信&企业微信，老师家长可使用不同的端进行操作，通信模块可以在不同的通道间进行通知下发
+6. 个人参与了应用加入&管理和智慧应用-作业的开发
+  * 制定应用接入的规范
+  * 提供了应用市场管理&应用安装的能力支持
+  * 作业应用上，支持不同的作业类型的接入（同步练习，纸上作业，速算练习，语文预习等）
