--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -36,25 +36,18 @@ comments: false
 
 ### 2011.09-2014.11 / 湖南步步高集团 开发工程师
 
-* 在这段时间最大的成长是接触了业界比较常用的一些中间件产品，也出于兴趣，尝试着对Hbase Api进行了简单的封装并分享了出来。
-    * 地址：[https://github.com/Justice-love/oceandata](https://github.com/Justice-love/oceandata)
-
 ### 2014.11-2016.07／阿里巴巴集团 业务平台事业部(原共享事业部) 会员平台／资深开发工程师
 
 * 会员平台核身系统（敏感操作所必需进行的身份验证）的开发维护
 * 核身系统逐步取代安全部的二次验证，在淘宝网全网铺开。
-* 离开时初步参与核身系统上云方案。 
 
 ### 2016.07-2018.05／安克创新科技股份有限公司／资深开发工程师
 * 负责ERP系统的开发
-* 负责后端接口的维护（响应耗时，调用记录等）
-* 大数据表分表工作（简单哈希 + 虚拟节点）
-
+* 负责后端接口的维护
 
 ### 2018.05-2020.04 /湖南亚信
 * 负责物联网控制平台的多种通信协议的支持，如数据解析，身份认证等。
     * 支持如Lwm2m，Coap协议等。
-    * 基于Apache AJP，实现自定义的TCP协议
 
 ### 2020.04 ~ /腾讯
 * 负责腾讯教育产业智慧业务的开发，主要包括智慧校园，作业服务
