--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -58,13 +58,13 @@ comments: false
 1. 支持多种不同的事物模式（AT，TCC，Saga），其中AT模式是Seata基于二阶段提交典型模型的变种
 2. 一阶段：业务数据和回滚日志记录在同一个本地事务中提交，释放本地锁和连接资源。
 3. 二阶段：
-  1. 提交异步化，快速地完成。
-  2. 回滚通过一阶段的回滚日志进行反向补偿。
+  * 提交异步化，快速地完成。
+  * 回滚通过一阶段的回滚日志进行反向补偿。
 4. Seata默认的隔离级别是读未提交，如需上升到读已提交，则需使用`SELECT FOR UPDATE`语法
 5. 个人参与该项目中事物传播的部分
-  1. 全局事物的开启，使用GlobalTransactionScanner构建切面并添加到spring aop托管
-  2. rpc服务全局事物id的传播
-  3. 本地线程全局事物id的传播
+  * 全局事物的开启，使用GlobalTransactionScanner构建切面并添加到spring aop托管
+  * rpc服务全局事物id的传播
+  * 本地线程全局事物id的传播
 
 ### 物联网管理平台
 1. 支持多种物联网协议（coap，lwm2m，mqtt，lorawan），允许多种设备接入该物联网平台
@@ -73,7 +73,7 @@ comments: false
 4. 状态展示：用户可直观的查看接入的设备的当前状态
 5. 统计模块: 用户操作，设备状态等数据汇总展示
 6. 个人主要参与到该项目中多种协议的支持
-  1. coap, lwm2m, lorawan等物联网协议支持
+  * coap, lwm2m, lorawan等物联网协议支持
 
 ### 智慧校园项目
 1. 分为平台层和智慧应用侧
@@ -82,6 +82,6 @@ comments: false
 4. 平台侧与应用侧基于自定义协议传输
 5. 打通了微信&企业微信，老师家长可使用不同的端进行操作，通信模块可以在不同的通道间进行通知下发
 6. 个人参与了应用加入&管理和智慧应用-作业的开发
-  1. 制定应用接入的规范
-  2. 提供了应用市场管理&应用安装的能力支持
-  3. 作业应用上，支持不同的作业类型的接入（同步练习，纸上作业，速算练习，语文预习等）
+  * 制定应用接入的规范
+  * 提供了应用市场管理&应用安装的能力支持
+  * 作业应用上，支持不同的作业类型的接入（同步练习，纸上作业，速算练习，语文预习等）
