--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -36,6 +36,9 @@ comments: false
 
 ### 2011.09-2014.11 / 湖南步步高集团 开发工程师
 
+* 基于线下门店（汇米吧）商品自提系统的开发与维护
+* 网站运营活动系统开发
+
 ### 2014.11-2016.07／阿里巴巴集团 业务平台事业部(原共享事业部) 会员平台／资深开发工程师
 
 * 会员平台核身系统（敏感操作所必需进行的身份验证）的开发维护
