--- a/_posts/yan/2021-03-11-yanyan197.md
+++ b/_posts/yan/2021-03-11-yanyan197.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-周末跟着妈妈同事一起去游了炭河和到灰汤泡了温泉
+周末跟着妈妈同事一起去游了炭河和到灰汤泡了温泉😄
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/zhoumopaowenquan1.jpg" />
