--- a/_posts/yan/2021-04-02-yanyan201.md
+++ b/_posts/yan/2021-04-02-yanyan201.md
@@ -2,7 +2,7 @@
 layout: post
 title: "徐晓妍拍照"
 date: 2021-03-23
-excerpt: "妍妍的日记-200"
+excerpt: "妍妍的日记-201"
 tags: [徐晓妍]
 feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
@@ -18,6 +18,7 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi2.mov" type='video/mp4'>
     <p class="vjs-no-js">
@@ -25,6 +26,7 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi3.mov" type='video/mp4'>
     <p class="vjs-no-js">
@@ -32,6 +34,7 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi4.mov" type='video/mp4'>
     <p class="vjs-no-js">
@@ -39,6 +42,7 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi5.mov" type='video/mp4'>
     <p class="vjs-no-js">
@@ -46,6 +50,7 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi6.mov" type='video/mp4'>
     <p class="vjs-no-js">
@@ -53,6 +58,7 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi7.mov" type='video/mp4'>
     <p class="vjs-no-js">
