--- a/_posts/yan/2021-04-02-yanyan201.md
+++ b/_posts/yan/2021-04-02-yanyan201.md
@@ -66,3 +66,4 @@ video: true
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
     </p>
 </video>
+{: .notice}
