--- a/_posts/yan/2021-04-02-yanyan201.md
+++ b/_posts/yan/2021-04-02-yanyan201.md
@@ -12,7 +12,7 @@ video: true
 带徐晓妍逛零食店，跟在后面看她挑
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi1.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi1.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -20,7 +20,7 @@ video: true
 </video>
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi2.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi2.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -28,7 +28,7 @@ video: true
 </video>
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi3.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi3.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -36,7 +36,7 @@ video: true
 </video>
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi4.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi4.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -44,7 +44,7 @@ video: true
 </video>
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi5.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi5.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -52,7 +52,7 @@ video: true
 </video>
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi6.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi6.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -60,7 +60,7 @@ video: true
 </video>
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi7.mov" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/zijixuangoulingshi7.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
