--- a/_posts/life/2021-04-28-jieguo.md
+++ b/_posts/life/2021-04-28-jieguo.md
@@ -10,5 +10,6 @@ comments: true
 ---
 家里年初买的桃树结果了，结了好几个青色的小桃子，看来长得可以呀
 {: .notice}
-还没拍照，下次再补
-{: .notice}
+<figure>
+    <img src="{{ site.staticUrl }}/image/jpg/taoshujieguoile.jpg" />
+</figure>
