--- a/_posts/post/2021-05-15-go-aspect.md
+++ b/_posts/post/2021-05-15-go-aspect.md
@@ -12,6 +12,7 @@ comments: true
 ## 简介
 
 go-aspect是一个为golang提供切面编程可能性的工具，可以使用该工具，替换原有的go build来进行编译，将预先配置好的切面编织到目标代码中
+项目地址[https://github.com/Justice-love/go-aspect](https://github.com/Justice-love/go-aspect)
 
 ## 效果图
 
