--- a/_posts/post/2021-06-27-weave.md
+++ b/_posts/post/2021-06-27-weave.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "golang编译编织"
+title:  "golang编织方式"
 date:   2021-06-27
-excerpt: "golang编织的不同方式，手段"
+excerpt: "简介在做golang切面时不同的编织方式，手段"
 feature: https://cdn.justice-love.com/image/jpg/bjfj1.jpg
 tag:
 - go
