--- a/_posts/post/2021-06-27-weave.md
+++ b/_posts/post/2021-06-27-weave.md
@@ -33,11 +33,6 @@ comments: true
 
 这种方式主要是对上一种方式import问题的优化，新建一个新文件，则其import可以独立引入，不会对源文件产生影响，但其他问题仍然存在，这也是目前[go-aspect](https://github.com/Justice-love/go-aspect) 项目使用的方式
 
-### 优化target调用方式
-
-前两种方式，target是修改过方法名的原方法，比如增加固定后缀`_xgc`，这种方式的影响主要是debug或者日志中方法名不对应，会产生疑惑。
-可以保留其方法名，修改其接收者（如原方法没有接收者，则增加接收者，如有接收者， 则修改接收者），target调用，则通过新的接收者+原方法名进行调用。
-
 ## 总结
 
-以上是我在做[go-aspect](https://github.com/Justice-love/go-aspect) 项目时对编织手段的一种递进，最后一种方式是目前暂未支持的，后续会对项目进行优化。
+以上是我在做[go-aspect](https://github.com/Justice-love/go-aspect) 项目时对编织手段的一种递进，最后一种方式是目前已经支持的，后续如果有更好的方案会持续优化。
