--- a/_posts/post/2021-06-27-weave.md
+++ b/_posts/post/2021-06-27-weave.md
@@ -35,4 +35,4 @@ comments: true
 
 ## 总结
 
-以上是我在做[go-aspect](https://github.com/Justice-love/go-aspect) 项目时对编织手段的一种递进，最后一种方式是目前已经支持的，后续如果有更好的方案会持续优化。
+以上是本人在做[go-aspect](https://github.com/Justice-love/go-aspect) 项目时对编织手段的一种递进，最后一种方式是目前已经支持的，后续如果有更好的方案会持续优化。
