--- a/_posts/yan/2021-07-12-yanyan211.md
+++ b/_posts/yan/2021-07-12-yanyan211.md
@@ -13,4 +13,5 @@ comments: true
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/guangpanyan1.jpg" />
     <img src="{{ site.staticUrl }}/yanyan/image/guangpanyan2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/guangpanyan3.jpg" />
 </figure>
