--- a/_posts/post/2021-08-20-gorm-prom.md
+++ b/_posts/post/2021-08-20-gorm-prom.md
@@ -42,17 +42,17 @@ db.Use(prometheus.New(prometheus.Config{
 gorm的日志中已经带有了sql source，执行耗时，参数，发生时间等数据，如果能够对gorm的日志进行扩展，在记录日志的同时，将数据采集即可不用开启新的端点就能完成采集，简易代码如下：
 
 ```
-type dbStatsLog struct {
+type StatsLog struct {
 	tally.Scope
 	gormLogger *gormzap.Logger
 }
 
-func (log *dbStatsLog) Print(v ...interface{}) {
+func (log *StatsLog) Print(v ...interface{}) {
 	log.stats(v)
 	log.gormLogger.Print(v...)
 }
 
-func (log *dbStatsLog) stats(values []interface{}) {
+func (log *StatsLog) stats(values []interface{}) {
 	if len(values) > 1 {
 		var level = values[0]
 		source := getSource(values)
