--- a/_posts/post/2021-06-27-weave.md
+++ b/_posts/post/2021-06-27-weave.md
@@ -31,7 +31,28 @@ comments: true
 
 ### 在新文件中进行追加
 
-这种方式主要是对上一种方式import问题的优化，新建一个新文件，则其import可以独立引入，不会对源文件产生影响，但其他问题仍然存在，这也是目前[go-aspect](https://github.com/Justice-love/go-aspect) 项目使用的方式
+这种方式主要是对上一种方式import问题的优化，新建一个新文件，则其import可以独立引入，不会对源文件产生影响，但日志中和debug时方法不对应的问题仍然存在，这也是目前[go-aspect](https://github.com/Justice-love/go-aspect) 项目使用的方式
+
+### 利用嵌入式结构体
+
+修改原方法的接受者，如无接受者，则添加一个接收者，类似下面方法
+* 原方法：
+```
+func (t TS) m()  {
+}
+
+```
+* 新方法：
+```
+type TSS struct {
+	TS
+}
+
+func (t TSS) m()  {
+}
+
+```
+该中方案是在上一方案上的递进，能够比较好的解决上一方案遗留的因方法名被修改导致的一系列问题。
 
 ## 总结
 
