--- a/_posts/yan/2021-10-08-yanyan222.md
+++ b/_posts/yan/2021-10-08-yanyan222.md
@@ -11,8 +11,7 @@ video: true
 ---
 徐晓妍超能力
 {: .notice}
-<video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/mov/IMG_0648.MOV" type='video/quicktime'>
+<video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}" src=="{{ site.staticUrl }}/yanyan/video/mov/IMG_0648.MOV" >
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
