--- a/_posts/yan/2021-10-18-yanyan223.md
+++ b/_posts/yan/2021-10-18-yanyan223.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-徐晓妍这是在想什么呢ð
+徐晓妍这是在想什么呢？
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/xiangshenme1.JPG" />
