--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -10,10 +10,9 @@ comments: false
 ---
 
 ## 个人信息
-* 徐轶／男／1988.12
-* 本科／生态学／中南林业科技大学
+* 徐轶
+* 本科／中南林业科技大学
 * 15580938143／eddyxu1213@126.com
-* 现居地：长沙
 * 博客地址：[http://justice-love.com/](http://justice-love.com/)
 * GitHub：[https://github.com/Justice-love](https://github.com/Justice-love)
 
