--- a/_posts/yan/2021-11-17-yanyan224.md
+++ b/_posts/yan/2021-11-17-yanyan224.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "打卡太平街"
+title: "打卡长沙老街"
 date: 2021-11-17
 excerpt: "妍妍的日记-224"
 tags: [徐晓妍]
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-带着徐晓妍打卡太平街
+带着徐晓妍打卡长沙老街
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/taipingjie1.jpg" />
