--- a/_posts/yan/2021-11-17-yanyan224.md
+++ b/_posts/yan/2021-11-17-yanyan224.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-带着徐晓妍打卡长沙老街
+带着徐晓妍打卡长沙老街--太平街
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/taipingjie1.jpg" />
