--- a/_posts/yan/2021-12-07-yanyan227.md
+++ b/_posts/yan/2021-12-07-yanyan227.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "带着帽子的徐晓妍"
+title: "戴着帽子的徐晓妍"
 date: 2021-12-07
 excerpt: "妍妍的日记-227"
 tags: [徐晓妍]
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-带着帽子的徐晓妍
+戴着帽子的徐晓妍
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/daimaozipaizhao1.jpg" />
