--- a/_posts/yan/2022-02-10-yanyan232.md
+++ b/_posts/yan/2022-02-10-yanyan232.md
@@ -7,6 +7,7 @@ tags: [徐晓妍]
 feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
+video: true
 ---
 恭喜女足夺得2022年亚洲杯冠军
 {: .notice}
