--- a/_posts/yan/2022-03-28-yanyan235.md
+++ b/_posts/yan/2022-03-28-yanyan235.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "煎鸡蛋"
+title: "鸡蛋饼"
 date: 2022-03-28
 excerpt: "妍妍的日记-235"
 tags: [徐晓妍]
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-徐晓妍最喜欢吃煎鸡蛋了🍳
+徐晓妍最喜欢吃鸡蛋饼了🍳
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/jiandan.jpeg" />
