--- a/_posts/yan/2022-05-23-yanyan241.md
+++ b/_posts/yan/2022-05-23-yanyan241.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-晚饭没吃饭，门口发展中
+晚饭没吃完，门口罚站中
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/fazhan.jpeg" />
