--- a/_posts/yan/2023-01-16-yanyan272.md
+++ b/_posts/yan/2023-01-16-yanyan272.md
@@ -11,6 +11,10 @@ video: true
 ---
 衡钢操场草坪上玩
 {: .notice}
+<figure>
+    <img src="{{ site.staticUrl }}/yanyan/image/henggangcaochang.jpeg" />
+</figure>
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/henggangcaodi.mp4" type='video/mp4'>
     <p class="vjs-no-js">
