--- a/_posts/yan/2023-01-16-yanyan272.md
+++ b/_posts/yan/2023-01-16-yanyan272.md
@@ -15,6 +15,7 @@ video: true
     <img src="{{ site.staticUrl }}/yanyan/image/henggangcaochang.jpeg" />
 </figure>
 {: .notice}
+{: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/henggangcaodi.mp4" type='video/mp4'>
     <p class="vjs-no-js">
