--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -52,7 +52,7 @@ comments: false
     * 支持如Lwm2m，Coap协议等。
 
 ### 2020.04 ~ /腾讯
-* 负责腾讯教育产业智慧业务的开发，主要包括智慧校园，作业服务
+* 负责腾讯教育产业相关项目的开发和管理，主要包括智慧校园-学校管理平台项目, 白板工具等。
     
 ## 项目
 
@@ -77,13 +77,9 @@ comments: false
 6. 个人主要参与到该项目中多种协议的支持
   * coap, lwm2m, lorawan等物联网协议支持
 
-### 智慧校园项目
-1. 分为平台层和智慧应用侧
-2. 平台层提供基本的学校，教育局管理功能以及应用接入的功能
-3. 应用侧提供一些智慧教学应用，比如比如通讯录，异常状态上报，作业，报修，一些在线课程教学等，便捷日常教学
-4. 平台侧与应用侧基于自定义协议传输
-5. 打通了微信&企业微信，老师家长可使用不同的端进行操作，通信模块可以在不同的通道间进行通知下发
-6. 个人参与了应用加入&管理和智慧应用-作业的开发
-  * 制定应用接入的规范
-  * 提供了应用市场管理&应用安装的能力支持
-  * 作业应用上，支持不同的作业类型的接入（同步练习，纸上作业，速算练习，语文预习等）
+### 教育白板项目
+1. 作为开发负责人对整个项目日常开发工作负责
+2. 使用makefile制作多平台部署脚本， 包含 镜像制作&上传， 远程Debug模式开启, 指标上报, 网关注册， 健康检查
+3. 与金山合作研发， 进行PPT到HTML的转码， 用户可以在白板上查看包含特效的PPT
+4. 使用信令机制，做到用户之间的操作同步以及后台的白板录制
+5. 扩展K8S API， 实现HPA通过自定义指标扩缩容
