--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -56,7 +56,7 @@ comments: false
     
 ## 项目
 
-### 分布式事物Seata
+### 分布式事务Seata
 1. 支持多种不同的事物模式（AT，TCC，Saga），其中AT模式是Seata基于二阶段提交典型模型的变种
 2. 一阶段：业务数据和回滚日志记录在同一个本地事务中提交，释放本地锁和连接资源。
 3. 二阶段：
