--- a/_posts/yan/2023-07-14-yanyan279.md
+++ b/_posts/yan/2023-07-14-yanyan279.md
@@ -12,6 +12,6 @@ video: true
 最后一天在幼儿园的生活
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/7.9时代毕业典礼/youeryuanbiye1.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/7.9时代毕业典礼/youeryuanbiye2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/youeryuanbiye1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/youeryuanbiye2.jpg" />
 </figure>
