--- a/_posts/yan/2023-10-20-yanyan281.md
+++ b/_posts/yan/2023-10-20-yanyan281.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg
 yan: true
 comments: true
 ---
-丽江游
+姐姐和朋友做游戏
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/jiejiezuoyouxi.jpg" />
