--- a/_posts/life/2024-03-01-tax.md
+++ b/_posts/life/2024-03-01-tax.md
@@ -11,5 +11,5 @@ comments: true
 2023退税6千多,记录一下
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/image/jpg/tax.jpg" />
+    <img src="{{ site.staticUrl }}/image/jpg/tuishui.jpg" />
 </figure>
